# earshot

./: .gitignore  LICENSE  README.md  render.yaml
backend/: .env.example  package-lock.json  package.json
backend/data/: earshot.db  earshot.db-shm  earshot.db-wal
backend/data/audio/: 2EOsABPYx2fnzG6RoO4Nl.opus  fOE3U5j2F4IMo23jX5zTN.opus  jKqcOxrHKsaELAvkBLG4r.opus  x7EgLl5i76uf9727Eh3D9.opus
backend/src/: auth.js  billing.js  db.js  devicelink.js  mailer.js  server.js  storage.js  transcode.js  tunnel.js
docs/: CLOUD.md  HANDOFF.md  plan.md  supabase-auth-migration.sql  supabase-collab-migration.sql  supabase-schema.sql  supabase-share-comments-migration.sql
plugin/: CMakeLists.txt
plugin/Source/: BrandLookAndFeel.cpp  BrandLookAndFeel.h  CaptureBuffer.h  HealthPoller.cpp  HealthPoller.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProjectsPoller.cpp  ProjectsPoller.h  SignInFlow.cpp  SignInFlow.h  TakeWriter.cpp  TakeWriter.h  TakesPoller.cpp  TakesPoller.h  Uploader.cpp  Uploader.h
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  auth.tsx  cover.ts  data.ts  styles.css
web/src/screens/: Comments.tsx  Library.tsx  Link.tsx  Members.tsx  Project.tsx  Shared.tsx  SignIn.tsx
